--- a/src/modules/tailorPortal/TailorLayout.css
+++ b/src/modules/tailorPortal/TailorLayout.css
@@ -231,18 +231,12 @@
   .menu-toggle {
     display: flex;
   }
-  .t-brand {
-    padding-left: 46px;
-    position: relative;
-  }
-  .t-brand .menu-toggle {
-    position: absolute;
-    left: 6px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
   .t-main {
     padding: 20px;
+    padding-top: 64px;
     max-height: none;
+  }
+  .t-sidebar.open .t-brand {
+    padding-left: 54px;
   }
 }
